# ot-harjoitustyo

./: .gitignore  README.md
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  monopoli.md
verkkokurssi-app/: pyproject.toml  tasks.py
verkkokurssi-app/src/: app.py  build.py  config.py  datapack.py  initialize_database.py  routes.py
verkkokurssi-app/src/databaselogic/: database.py  initialize_database.py
verkkokurssi-app/src/entities/: course.py  exercise.py  user.py
verkkokurssi-app/src/repositories/: course_repository.py  exercise_repository.py  user_repository.py
verkkokurssi-app/src/services/: app_service.py  appservice.py
verkkokurssi-app/src/tests/: conftest.py  course_repository_test.py  exercise_repository_test.py  repository_test.py  user_repository_test.py
verkkokurssi-app/src/tests/repositories/: course_repository_test.py  exercise_repository_test.py  user_repository_test.py
verkkokurssi-app/src/tests/services/: appservice_test.py
verkkokurssi-app/src/ui/: exercise_view.py  login_view.py  online_course_view.py  sign_up_view.py  ui.py
